ffi/include/int2dds-ffi.h


typedef struct Int2DdsDataReader Int2DdsDataReader;
typedef struct Int2DdsDataReaderQos Int2DdsDataReaderQos;
typedef struct Int2DdsParticipant Int2DdsParticipant;
typedef struct Int2DdsSampleSeq Int2DdsSampleSeq;
typedef struct Int2DdsSubscriber Int2DdsSubscriber;
typedef struct Int2DdsSubscriberQos Int2DdsSubscriberQos;
typedef struct Int2DdsTopic Int2DdsTopic;
typedef int32_t Int2DdsRet;
typedef struct Int2DdsSampleInfo {
  int32_t source_timestamp_sec;
  uint32_t source_timestamp_nanosec;
  uint32_t sample_state;
  uint32_t view_state;
  uint32_t instance_state;
  uint8_t instance_handle[16];
  uint8_t publication_handle[16];
  int32_t disposed_generation_count;
  int32_t no_writers_generation_count;
  int32_t sample_rank;
  int32_t generation_rank;
  int32_t absolute_generation_rank;
  bool valid_data;
} Int2DdsSampleInfo;
typedef struct Int2DdsSampleRejectedStatus {
  int32_t total_count;
  int32_t total_count_change;
  enum Int2DdsSampleRejectedStatusKind last_reason;
  uint8_t last_instance_handle[16];
} Int2DdsSampleRejectedStatus;
typedef struct Int2DdsLivelinessChangedStatus {
  int32_t alive_count;
  int32_t not_alive_count;
  int32_t alive_count_change;
  int32_t not_alive_count_change;
  uint8_t last_publication_handle[16];
} Int2DdsLivelinessChangedStatus;
typedef struct Int2DdsRequestedDeadlineMissedStatus {
  int32_t total_count;
  int32_t total_count_change;
  uint8_t last_instance_handle[16];
} Int2DdsRequestedDeadlineMissedStatus;
typedef struct Int2DdsRequestedIncompatibleQosStatus {
  int32_t total_count;
  int32_t total_count_change;
  enum Int2DdsQosPolicyId last_policy_id;
  uint32_t policies_count;
} Int2DdsRequestedIncompatibleQosStatus;
typedef struct Int2DdsSampleLostStatus {
  int32_t total_count;
  int32_t total_count_change;
} Int2DdsSampleLostStatus;
typedef struct Int2DdsDataReaderListener {
  Int2DdsOnDataAvailableCallback on_data_available;
  Int2DdsOnSubscriptionMatchedCallback on_subscription_matched;
  Int2DdsOnSampleRejectedCallback on_sample_rejected;
  Int2DdsOnLivelinessChangedCallback on_liveliness_changed;
  Int2DdsOnRequestedDeadlineMissedCallback on_requested_deadline_missed;
  Int2DdsOnRequestedIncompatibleQosCallback on_requested_incompatible_qos;
  Int2DdsOnSampleLostCallback on_sample_lost;
  Int2DdsUserContext user_context;
} Int2DdsDataReaderListener;
Int2DdsRet int2dds_create_subscriber(const struct Int2DdsParticipant *participant,
                                     struct Int2DdsSubscriber **subscriber_out);
Int2DdsRet int2dds_create_subscriber_with_qos(const struct Int2DdsParticipant *participant,
                                              const struct Int2DdsSubscriberQos *qos,
                                              struct Int2DdsSubscriber **subscriber_out);
Int2DdsRet int2dds_subscriber_set_qos(const struct Int2DdsSubscriber *subscriber,
                                      const struct Int2DdsSubscriberQos *qos);
Int2DdsRet int2dds_subscriber_get_qos(const struct Int2DdsSubscriber *subscriber,
                                      struct Int2DdsSubscriberQos **qos_out);
Int2DdsRet int2dds_delete_subscriber(struct Int2DdsSubscriber *subscriber);
Int2DdsRet int2dds_create_datareader(const struct Int2DdsSubscriber *subscriber,
                                     const struct Int2DdsTopic *topic,
                                     const struct Int2DdsDataReaderQos *qos,
                                     struct Int2DdsDataReader **reader_out);
Int2DdsRet int2dds_create_datareader_with_listener(const struct Int2DdsSubscriber *subscriber,
                                                   const struct Int2DdsTopic *topic,
                                                   const struct Int2DdsDataReaderQos *qos,
                                                   const struct Int2DdsDataReaderListener *listener,
                                                   uint32_t mask,
                                                   struct Int2DdsDataReader **reader_out);
Int2DdsRet int2dds_create_datareader_with_profile(const struct Int2DdsSubscriber *subscriber,
                                                  const struct Int2DdsTopic *topic,
                                                  const char *qos_path,
                                                  struct Int2DdsDataReader **reader_out);
Int2DdsRet int2dds_create_datareader_with_profile_and_listener(const struct Int2DdsSubscriber *subscriber,
                                                               const struct Int2DdsTopic *topic,
                                                               const char *qos_path,
                                                               const struct Int2DdsDataReaderListener *listener,
                                                               uint32_t mask,
                                                               struct Int2DdsDataReader **reader_out);
Int2DdsRet int2dds_datareader_set_listener(struct Int2DdsDataReader *reader,
                                           const struct Int2DdsDataReaderListener *listener,
                                           uint32_t mask);
Int2DdsRet int2dds_datareader_get_listener(const struct Int2DdsDataReader *reader,
                                           struct Int2DdsDataReaderListener *listener_out);
Int2DdsRet int2dds_datareader_set_qos(const struct Int2DdsDataReader *reader,
                                      const struct Int2DdsDataReaderQos *qos);
Int2DdsRet int2dds_datareader_get_qos(const struct Int2DdsDataReader *reader,
                                      struct Int2DdsDataReaderQos **qos_out);
Int2DdsRet int2dds_delete_datareader(struct Int2DdsDataReader *reader);
Int2DdsRet int2dds_get_subscription_matched_status(const struct Int2DdsDataReader *reader,
                                                   int32_t *total_count_out,
                                                   int32_t *current_count_out);
Int2DdsRet int2dds_datareader_get_liveliness_changed_status(const struct Int2DdsDataReader *reader,
                                                            struct Int2DdsLivelinessChangedStatus *status_out);
Int2DdsRet int2dds_datareader_get_sample_rejected_status(const struct Int2DdsDataReader *reader,
                                                         struct Int2DdsSampleRejectedStatus *status_out);
Int2DdsRet int2dds_datareader_get_sample_lost_status(const struct Int2DdsDataReader *reader,
                                                     struct Int2DdsSampleLostStatus *status_out);
Int2DdsRet int2dds_datareader_get_requested_deadline_missed_status(const struct Int2DdsDataReader *reader,
                                                                   struct Int2DdsRequestedDeadlineMissedStatus *status_out);
Int2DdsRet int2dds_datareader_get_requested_incompatible_qos_status(const struct Int2DdsDataReader *reader,
                                                                    struct Int2DdsRequestedIncompatibleQosStatus *status_out);
Int2DdsRet int2dds_subscriber_delete_contained_entities(const struct Int2DdsSubscriber *subscriber);
Int2DdsRet int2dds_take_serialized(const struct Int2DdsDataReader *reader,
                                   uint8_t *buffer,
                                   uintptr_t buffer_capacity,
                                   uintptr_t *actual_size_out,
                                   bool *valid_data_out);
Int2DdsRet int2dds_read_serialized(const struct Int2DdsDataReader *reader,
                                   uint8_t *buffer,
                                   uintptr_t buffer_capacity,
                                   uintptr_t *actual_size_out,
                                   bool *valid_data_out);
Int2DdsRet int2dds_take_serialized_w_info(const struct Int2DdsDataReader *reader,
                                          uint8_t *buffer,
                                          uintptr_t buffer_capacity,
                                          uintptr_t *actual_size_out,
                                          struct Int2DdsSampleInfo *info_out);
Int2DdsRet int2dds_read_serialized_w_info(const struct Int2DdsDataReader *reader,
                                          uint8_t *buffer,
                                          uintptr_t buffer_capacity,
                                          uintptr_t *actual_size_out,
                                          struct Int2DdsSampleInfo *info_out);
Int2DdsRet int2dds_take_serialized_batch(const struct Int2DdsDataReader *reader,
                                         int32_t max_samples,
                                         struct Int2DdsSampleSeq **seq_out);
Int2DdsRet int2dds_read_serialized_batch(const struct Int2DdsDataReader *reader,
                                         int32_t max_samples,
                                         struct Int2DdsSampleSeq **seq_out);
uintptr_t int2dds_sample_seq_length(const struct Int2DdsSampleSeq *seq);
Int2DdsRet int2dds_sample_seq_get_data(const struct Int2DdsSampleSeq *seq,
                                       uintptr_t index,
                                       uint8_t *buffer,
                                       uintptr_t buffer_capacity,
                                       uintptr_t *actual_size_out);
Int2DdsRet int2dds_sample_seq_get_info(const struct Int2DdsSampleSeq *seq,
                                       uintptr_t index,
                                       struct Int2DdsSampleInfo *info_out);
Int2DdsRet int2dds_sample_seq_delete(struct Int2DdsSampleSeq *seq);
Int2DdsRet int2dds_read_serialized_w_condition(const struct Int2DdsDataReader *reader,
                                               uint8_t *buffer,
                                               uintptr_t buffer_capacity,
                                               uintptr_t *actual_size_out,
                                               struct Int2DdsSampleInfo *info_out,
                                               uint32_t sample_state_mask,
                                               uint32_t view_state_mask,
                                               uint32_t instance_state_mask);
Int2DdsRet int2dds_take_serialized_w_condition(const struct Int2DdsDataReader *reader,
                                               uint8_t *buffer,
                                               uintptr_t buffer_capacity,
                                               uintptr_t *actual_size_out,
                                               struct Int2DdsSampleInfo *info_out,
                                               uint32_t sample_state_mask,
                                               uint32_t view_state_mask,
                                               uint32_t instance_state_mask);
Int2DdsRet int2dds_take_serialized_batch_w_condition(const struct Int2DdsDataReader *reader,
                                                     int32_t max_samples,
                                                     struct Int2DdsSampleSeq **seq_out,
                                                     uint32_t sample_state_mask,
                                                     uint32_t view_state_mask,
                                                     uint32_t instance_state_mask);
Int2DdsRet int2dds_read_serialized_batch_w_condition(const struct Int2DdsDataReader *reader,
                                                     int32_t max_samples,
                                                     struct Int2DdsSampleSeq **seq_out,
                                                     uint32_t sample_state_mask,
                                                     uint32_t view_state_mask,
                                                     uint32_t instance_state_mask);
Int2DdsRet int2dds_datareader_wait_for_historical_data(const struct Int2DdsDataReader *reader,
                                                       int64_t timeout_ms);